# oedipa

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/skills/adr/: SKILL.md
.claude/skills/adr-done/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: SECURITY.md
.github/workflows/: test.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
docs/ai/: concept.md  supply-chain.md  tonnetz-test-vectors.json
docs/ai/adr/: 001-tonnetz-engine-interface.md  002-m4l-device-architecture.md  003-m4l-parameters-state.md  004-midi-input.md  005-rhythmic-feel.md  006-workflow.md  007-m4l-distribution.md  008-vst-stack-and-scope.md  009-vst-distribution.md  010-vst-clap-support.md  011-modulation-outputs.md  011-oedipa-v1.md  011-shell-and-gate.md  012-multi-part-rendering.md  INDEX.md
docs/ai/adr/archive/: 001-tonnetz-engine-interface.md  002-m4l-device-architecture.md  003-m4l-parameters-state.md  004-midi-input.md  005-rhythmic-feel.md  006-workflow.md  007-m4l-distribution.md  008-vst-stack-and-scope.md  009-vst-distribution.md  010-vst-clap-support.md
m4l/: Oedipa.amxd  Oedipa.maxpat  cellstrip-renderer.js  lattice-renderer.js  oedipa-host.entry.mjs  oedipa-host.js  package.json  pnpm-lock.yaml  separator-renderer.js
m4l/engine/: README.md  lattice.test.ts  lattice.ts  package-lock.json  package.json  tonnetz.js  tonnetz.test.js  tonnetz.test.ts  tonnetz.ts  tsconfig.json
m4l/host/: bridge.test.ts  bridge.ts  cellstrip.test.ts  cellstrip.ts  host.test.ts  host.ts  index.js  maxpat-paths.test.ts  oedipa-host-bundle.test.ts  package-lock.json  package.json  presets.ts  slot.test.ts  slot.ts  tsconfig.json
m4l/scripts/: maxpat-to-amxd.mjs
vst/: CMakeLists.txt  LICENSE  Makefile
vst/Source/: PluginProcessor.cpp
vst/Source/Editor/: AnchorsView.cpp  AnchorsView.h  DiagLog.h  LatticeView.cpp  LatticeView.h  OutputView.cpp  OutputView.h  PluginEditor.cpp  PluginEditor.h  PresetView.cpp  PresetView.h  RightRailView.cpp  RightRailView.h  SequenceDrawerView.cpp  SequenceDrawerView.h  SequenceRowView.cpp  SequenceRowView.h  SlotBarView.cpp  SlotBarView.h  Theme.cpp  Theme.h  VoicingView.cpp  VoicingView.h
vst/Source/Engine/: Lattice.cpp  Lattice.h  PointerInteraction.cpp  PointerInteraction.h  Presets.h  Rhythm.cpp  Rhythm.h  Rng.h  SequenceDrawer.cpp  SequenceDrawer.h  SlotBank.cpp  SlotBank.h  State.h  Tonnetz.cpp  Tonnetz.h  Walker.cpp  Walker.h
vst/Source/Plugin/: Parameters.cpp  Parameters.h  PluginProcessor.cpp  PluginProcessor.h
vst/scripts/: INSTALL.txt  README.txt  build-dmg.sh  build-pkg.sh  check-artefacts.sh  codesign.sh  distribution.xml  notarize.sh
vst/scripts/pkg-resources/en.lproj/: conclusion.txt  license.txt  welcome.txt
vst/scripts/pkg-resources/ja.lproj/: conclusion.txt  license.txt  welcome.txt
vst/tests/: main.cpp  test_Editor.cpp  test_Lattice.cpp  test_Plugin.cpp  test_PluginSlotBank.cpp  test_PointerInteraction.cpp  test_Rhythm.cpp  test_SequenceDrawer.cpp  test_SlotBank.cpp  test_Tonnetz.cpp  test_Walker.cpp
